feat: can remove schedules due orders