@@ -8,6 +8,7 @@ import com.example.rohlikproject.domain.model.product.Product;
 import com.example.rohlikproject.infrastructure.mapping.OrderEntity;
 import com.example.rohlikproject.infrastructure.mapping.OrderItemEntity;
 import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -19,7 +20,7 @@ import org.springframework.stereotype.Component;
 @Port
 public class OrderRepositoryAdapter implements OrderRepository {
 
-  private SpringOrderRepository orderRepository;
+  private final SpringOrderRepository orderRepository;
 
   public OrderRepositoryAdapter(SpringOrderRepository orderRepository) {
     this.orderRepository = orderRepository;
@@ -29,26 +30,7 @@ public class OrderRepositoryAdapter implements OrderRepository {
   public Optional<Order> findOrder(UUID orderId) {
     return orderRepository
         .findById(orderId)
-        .map(
-            orderEntity -> {
-              var orderItems =
-                  orderEntity.getItems().stream()
-                      .map(
-                          item -> {
-                            var product =
-                                new Product(
-                                    item.getProductId(), item.getAmount(), item.getUnitPrice(), "");
-                            return new OrderItem(product, item.getAmount());
-                          })
-                      .collect(Collectors.toSet());
-
-              return new Order(
-                  orderEntity.getId(),
-                  orderEntity.getCreateDate(),
-                  orderEntity.getClosedDate(),
-                  orderEntity.getStatus(),
-                  orderItems);
-            });
+        .map(this::entityToModel);
   }
 
   @Override
@@ -68,7 +50,6 @@ public class OrderRepositoryAdapter implements OrderRepository {
 
   @Override
   public void cancelOrder(UUID orderId) {
-
     this.orderRepository.update(orderId, OrderStatus.CANCELED, Instant.now());
   }
 
@@ -79,26 +60,34 @@ public class OrderRepositoryAdapter implements OrderRepository {
 
   @Override
   public List<Order> findAll() {
-    return orderRepository.findAll().stream()
-        .map(
-            orderEntity -> {
-              var items =
-                  orderEntity.getItems().stream()
-                      .map(
-                          item -> {
-                            var product =
-                                new Product(
-                                    item.getProductId(), item.getAmount(), item.getUnitPrice(), "");
-                            return new OrderItem(product, item.getAmount());
-                          })
-                      .collect(Collectors.toSet());
-              return new Order(
-                  orderEntity.getId(),
-                  orderEntity.getCreateDate(),
-                  orderEntity.getClosedDate(),
-                  orderEntity.getStatus(),
-                  items);
-            })
-        .toList();
+    return orderRepository.findAll().stream().map(this::entityToModel).toList();
+  }
+
+  @Override
+  public List<Order> findOrdersDue(Integer maxTimeOrdersDueMinutes) {
+    return orderRepository
+        .findAllByStatusEqualsAndCreateDateBefore(
+            OrderStatus.OPEN, Instant.now().minus(maxTimeOrdersDueMinutes, ChronoUnit.MINUTES))
+        .stream()
+        .map(this::entityToModel)
+        .collect(Collectors.toList());
+  }
+
+  private Order entityToModel(OrderEntity orderEntity) {
+    var items =
+        orderEntity.getItems().stream()
+            .map(
+                item -> {
+                  var product =
+                      new Product(item.getProductId(), item.getAmount(), item.getUnitPrice(), "");
+                  return new OrderItem(product, item.getAmount());
+                })
+            .collect(Collectors.toSet());
+    return new Order(
+        orderEntity.getId(),
+        orderEntity.getCreateDate(),
+        orderEntity.getClosedDate(),
+        orderEntity.getStatus(),
+        items);
   }
 }
